Change update checker to use Modrinth